# senseye

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
scripts/: generate_node_pipeline_asset.py  generate_readme_graph_assets.py
senseye/: __main__.py  calibration.py  config.py  main.py  protocol.py
senseye/fusion/: acoustic_range.py  consensus.py  graph.py  runtime.py  tomography.py  trilateration.py
senseye/mapping/dynamic/: devices.py  motion.py  state.py
senseye/mapping/static/: floorplan.py  layout.py  topology.py  walls.py
senseye/node/: __main__.py  acoustic.py  belief.py  filter.py  inference.py  peer.py  scanner.py
senseye/ui/: dashboard.py  overlay.py  renderer.py
tests/: test_acoustic_range.py  test_belief.py  test_calibration.py  test_config.py  test_consensus.py  test_filter.py  test_fusion_runtime.py  test_inference.py  test_main_config.py  test_main_motion.py  test_trilateration.py
