[project]
name = "senseye"
version = "0.1.0"
description = "Distributed RF sensing for apartment mapping and motion detection"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.21.0",
    "zeroconf>=0.131.0",
    "numpy>=1.26.0",
    "rich>=13.7.0",
    "pyobjc-framework-CoreWLAN>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
senseye = "senseye.main:main"

[project.optional-dependencies]
acoustic = ["sounddevice>=0.4.6"]
dev = ["pytest>=8.0", "ruff>=0.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
